test_scores/negative_dimers/features/Q5T7V8.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q5T7V8.pkl.xz